sketch functionality, change color and event type

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <title>Etch-A-Sketch</title>
 </head>
 <body>
+  <select name="colors" id="colors">
+    <option value="black">Black</option>
+    <option value="red">Red</option>
+    <option value="green">Green</option>
+    <option value="blue">Blue</option>
+    <option value="rainbow">Rainbow</option>
+  </select>
+  <select name="events" id="events">
+    <option value="mouseover">Mouse over!</option>
+    <option value="click">Clicking!</option>
+  </select>
   <div class="container"></div>
 </body>
 </html>
