add button to change grid size

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div class="settings">
+    <button>New Grid</button>
     <div class="configs">
       Rainbow: 
       <label class="switch">
